<resources>
    <string name="app_name">JavaEE+MongoDB</string>
    <string name="drawer_doc_list">Документи</string>
    <string name="drawer_info">Інформація</string>
    <string name="drawer_settings">Налаштування</string>
    <string name="menu_action_delete">Видалити</string>
    <string name="menu_action_edit">Редагувати</string>

    <string name="hint_model_name">Медична назва</string>
    <string name="hint_model_description">Опис</string>
    <string name="hint_model_indication">Показання</string>
    <string name="hint_model_contraindication">Протипоказання</string>
    <string name="hint_model_sales_form">Форма продажу</string>

    <string name="hint_settings_host">REST API host</string>
    <string name="hint_settings_port">REST API port</string>

    <string name="snack_bar_settings_saved">Збережено</string>
    <string name="snack_bar_dismiss">Відміна</string>
    <string name="snack_bar_model_added">Додано</string>
    <string name="snack_bar_model_not_added">Помилка</string>
    <string name="snack_bar_delete_failed">Помилка</string>
    <string name="snack_bar_deleted">Видалено</string>
    <string name="action_delete_multiple_models">Видалили</string>
    <string name="model_update_failed">Помилка</string>
    <string name="snack_bar_model_edited">Успішно оновлено</string>
    <string name="menu_item_search">Пошук</string>
    <string name="menu_item_change_view_mode">VIEW_MODE</string>
</resources>
