<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/AppTheme.CollapsedTextAppearance"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@style/AppTheme.ExpandedTextAppearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_model_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="68dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="68dp"
                    android:hint="@string/hint_model_name"
                    android:textColorHint="@color/colorTextSecondary"
                    app:theme="@style/AppTheme.TextInputLayout.Accent.Title">

                    <android.support.v7.widget.AppCompatEditText
                        style="@style/AppTheme.TextInputLayout.EditText.Accent.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textCapSentences"
                        android:textSize="36sp"
                        app:theme="@style/AppTheme.TextInputLayout.EditText.Accent.Title" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_model_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="68dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="68dp"
                    android:hint="@string/hint_model_description"
                    android:textColorHint="@color/colorTextSecondary"
                    app:theme="@style/AppTheme.TextInputLayout.Accent.Title">

                    <android.support.v7.widget.AppCompatEditText
                        style="@style/AppTheme.TextInputLayout.EditText.Accent.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textCapSentences"
                        android:textSize="18sp"
                        app:theme="@style/AppTheme.TextInputLayout.EditText.Accent.Title" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupMenu"
                app:theme="@style/AppTheme.ToolBarStyle" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="24dp"
                    app:srcCompat="@drawable/ic_info_outline_grey_500_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_model_indication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/hint_model_indication"
                    app:theme="@style/AppTheme.TextInputLayout.Accent">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine|textCapSentences"
                        android:theme="@style/AppTheme.TextInputLayout.EditText.Accent" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="24dp"
                    app:srcCompat="@drawable/ic_highlight_off_grey_500_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_model_contraindication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_model_contraindication"
                    app:theme="@style/AppTheme.TextInputLayout.Accent">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine|textCapSentences"
                        app:theme="@style/AppTheme.TextInputLayout.EditText.Accent" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="24dp"
                    app:srcCompat="@drawable/ic_add_shopping_cart_grey_500_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_model_sales_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_model_sales_form"
                    app:theme="@style/AppTheme.TextInputLayout.Accent">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine|textCapSentences"
                        app:theme="@style/AppTheme.TextInputLayout.EditText.Accent" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="bottom|right|end"
        app:rippleColor="@color/colorAccentLight"
        app:srcCompat="@drawable/ic_done_white_24dp"
        app:useCompatPadding="true" />
</android.support.design.widget.CoordinatorLayout>